<resources>
    <string name="icon_ok">&#xe600;</string>
    <string name="icon_lock">&#xe78a;</string>
    <string name="icon_unlock">&#xe62f;</string>
    <string name="icon_user_manager">&#xe6ab;</string>
    <string name="icon_temporary_password">&#xe618;</string>
    <string name="icon_key_manager">&#xe62a;</string>
    <string name="icon_remote_open">&#xe734;</string>
    <string name="icon_no_data">&#xe642;</string>
    <string name="icon_history_alarm">&#xe613;</string>
    <string name="icon_history_info">&#xe612;</string>
    <string name="icon_history_open">&#xe603;</string>
    <string name="icon_locking">&#xe638;</string>
    <string name="icon_switch">&#xe628;</string>
    <string name="icon_timer">&#xe638;</string>
    <string name="icon_right_arrow">&#xe64c;</string>
    <string name="icon_add">&#xe652;</string>
    <string name="icon_add_2">&#xe68a;</string>
    <string name="icon_more">&#xe615;</string>
    <string name="icon_timer_2">&#xe651;</string>
    <string name="icon_calendar">&#xe7e3;</string>
    <string name="icon_dev">&#xe617;</string>
    <string name="icon_scene">&#xe755;</string>
    <string name="icon_notification">&#xe608;</string>
    <string name="icon_checked">&#xe631;</string>
    <string name="icon_subtraction">&#xe632;</string>
    <string name="icon_add_3">&#xe616;</string>
    <string name="icon_heating">&#xe63b;</string>
    <string name="icon_refrigeration">&#xe609;</string>
    <string name="icon_air_supply">&#xe779;</string>
    <string name="icon_dehumidification">&#xe686;</string>
    <string name="icon_low_wind">&#xe690;</string>
    <string name="icon_mid_wind">&#xe696;</string>
    <string name="icon_high_wind">&#xe68d;</string>
    <string name="icon_switch2">&#xe64e;</string>
    <string name="icon_switch3">&#xe6a1;</string>
    <string name="icon_backlight">&#xe9e2;</string>
    <string name="icon_search">&#xe633;</string>
    <string name="icon_clear">&#xe61b;</string>
    <string name="icon_auto">&#xe60b;</string>
    <string name="icon_temp">&#xe630;</string>
    <string name="icon_brightness">&#xe994;</string>
    <string name="icon_associated">&#xe63d;</string>
    <string name="icon_user">&#xe64a;</string>
    <string name="icon_pwd">&#xe62e;</string>
    <string name="icon_clear_2">&#xe63e;</string>
    <string name="icon_show">&#xe71c;</string>
    <string name="icon_hide">&#xe718;</string>
    <string name="icon_up_arrow">&#xe614;</string>
    <string name="icon_verification_code">&#xe63f;</string>
    <string name="icon_phone">&#xe640;</string>
    <string name="icon_edit">&#xe7e1;</string>
    <string name="icon_msg">&#xe637;</string>
    <string name="app_name">拉斐智能</string>
    <string name="contentDescription_null"></string>
    <string name="app_ver">1.0.4</string>
    <string name="app_brand">iMOCO</string>
    <string name="app_brand_show"></string>
    <string name="app_is_add_xz_device">No</string>
    <string name="app_is_hide_privacy_policy">No</string>
    <string name="app_is_hide_user_deal">No</string>
    <string name="app_privacy_policy_url"></string>
    <string name="app_user_deal_url"></string>
    <string name="rb_tab_one_desc">家</string>
    <string name="rb_tab_two_desc">场景</string>
    <string name="rb_tab_three_desc">我</string>
    <string name="rb_tab_four_desc">备用</string>
    <string name="main_home">我的家</string>
    <string name="main_init_hint_title">系统提示</string>
    <string name="main_init_hint">系统正在初始化数据，请稍候...</string>
    <string name="main_home_description">%s共有%d个房间</string>
    <string name="main_device_description">共有%d个设备, 其中%d个在线</string>
    <string name="main_device">设备</string>
    <string name="main_room">房间</string>
    <string name="main_share">分享</string>
    <string name="main_onekeyscene">一键执行场景</string>
    <string name="main_scenename">场景名称</string>
    <string name="main_scene_execute_hint">执行了%s场景</string>
    <string name="main_scene_execute_hint_2">执行了场景：%s</string>
    <string name="scene_scene">推荐场景</string>
    <string name="scene_my">我的场景</string>
    <string name="delete">删除</string>
    <string name="dialog_title">系统提示</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_send">命令发送成功</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_unbind">你真的要解绑定当前设备吗？</string>
    <string name="dialog_ota">当前网关有固件更新可升级，是否现在升级？</string>
    <string name="dialog_unbind_ok">当前设备已经解除绑定。</string>
    <string name="dialog_unlogin">系统没有登录，请先登录。</string>
    <string name="dialog_edit_title">修改标题</string>
    <string name="longconnection_disconnected">与服务器连接断开,不能发送命令。</string>
    <string name="connection_status_unable">未激活</string>
    <string name="connection_status_online">在线</string>
    <string name="connection_status_offline">离线</string>
    <string name="connection_status_prohibit">禁用</string>
    <string name="add_status_success">添加成功</string>
    <string name="add_status_otherbind">子设备已被其它网关绑定</string>
    <string name="add_status_fail">子设备注册失败</string>
    <string name="add_status_logout">注销</string>
    <string name="homespace_defaulthome">我的家</string>
    <string name="api_commitfailure">调用接口[%s]失败! %s</string>
    <string name="api_commitfailure_hint">调用接口失败!</string>
    <string name="api_commitfailure_hint_2">调用接口失败：%1$s</string>
    <string name="api_responseerror">调用接口[%s]成功, 但是响应发生错误! %s</string>
    <string name="api_responseerror_hint">获取数据失败！请重新登录或确保当前账号没有在其它地方登录。</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="logout_success">退出登录成功</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="login_inputusername">请录入用户名称</string>
    <string name="login_inputpassword">请录入用户密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_forgetpassword">忘记密码?</string>
    <string name="configproduct_title">请选择设备类型</string>
    <string name="configproduct_device_type_light">照明</string>
    <string name="configproduct_device_type_electric">电工</string>
    <string name="configproduct_device_type_safe">安防</string>
    <string name="configproduct_device_type_home">家居</string>
    <string name="configproduct_device_type_sensor">传感器</string>
    <string name="configproduct_device_type_environmental">环境电器</string>
    <string name="configproduct_device_type_living">生活电器</string>
    <string name="configproduct_device_type_gateway">网关</string>
    <string name="configproduct_device_type_other">其它</string>
    <string name="configproduct_productname">产品名称</string>
    <string name="configproduct_productkey">产品Key</string>
    <string name="configproduct_notproducthint">没有可供添加的设备类型，请到管理后台先配置好再执行添加。</string>
    <string name="configproduct_gateofflinehint">网关不在线，不能添加子设备。</string>
    <string name="productguidance_title">添加产品引导</string>
    <string name="productguidance_opearte">配网操作</string>
    <string name="productguidance_read">我已经阅读</string>
    <string name="productguidance_hint">请点选“我已经阅读”然后操作。</string>
    <string name="productguidance_help">长按开关任意按键5s以上，红色指示灯快闪，网关进入配网状态！</string>
    <string name="wifi_title">请选择WiFi</string>
    <string name="wifi_name">SSID</string>
    <string name="wifi_description">信号强度: %ddBm</string>
    <string name="ble_name">设备名称</string>
    <string name="ble_address">设备MAC地址</string>
    <string name="ble_send_failed_hint">发送数据失败，可能蓝牙设备已经断开了。</string>
    <string name="include_title">标题</string>
    <string name="scanble_bleeror_hint">系统不支持蓝牙或蓝牙没有打开，请确保支持蓝牙并且蓝牙已经打开。</string>
    <string name="scanble_scan">扫描网关</string>
    <string name="scanble_rescan">再次扫描网关</string>
    <string name="scanble_scanhint">系统正在扫描网关设备... </string>
    <string name="scanble_stop">停止扫描 </string>
    <string name="confignetwork_ssid">请录入路由器SSID</string>
    <string name="confignetwork_pwd">请录入路由器密码</string>
    <string name="confignetwork_noconnect">没有与配网设备的蓝牙建立连接，不能进行配置。</string>
    <string name="confignetwork_cofnig">配置</string>
    <string name="confignetwork_cancel">取消</string>
    <string name="confignetwork_timeout">长时配网仍未成功，请重试！</string>
    <string name="confignetwork_ackyzfail">与网关设备数据验证失败! 返回错误码为%d。</string>
    <string name="confignetwork_success">当前设备配网成功</string>
    <string name="permitjoin_hint">系统正在扫描%s</string>
    <string name="permitjoin_permit">允许入网</string>
    <string name="permitjoin_prohibit">拒绝入网</string>
    <string name="permitjoin_success">子设备入网并成功绑定</string>
    <string name="permitjoin_timeout">长时没有扫描到子设备，请重试！</string>
    <string name="devicelist_name">设备名称</string>
    <string name="devicelist_status">%s</string>
    <string name="devicelist_action">动作: %s</string>
    <string name="room_restaurant">餐厅</string>
    <string name="room_kitchen">厨房</string>
    <string name="room_mainbedroom">主卧</string>
    <string name="room_livingroom">客厅</string>
    <string name="room_study">书房</string>
    <string name="room_2thbedroom">次卧</string>
    <string name="roomlist_name">房间名称</string>
    <string name="roomlist_description">共有%d个设备</string>
    <string name="choicegateway_title">请选择所属网关</string>
    <string name="choicegateway_nohasgatewayhint">目前还没有一个网关设备,请先增加网关设备。</string>
    <string name="choicegateway_gateofflinehint">所选网关不在线, 不能添加子设备。</string>
    <string name="detailgateway_count">共%d个设备, 其中%d个在线</string>
    <string name="detailgateway_count_2">共%d个设备, 其中%d个已激活</string>
    <string name="detailgateway_armmode_cancel">网关已撤防</string>
    <string name="detailgateway_armmode_deploy">网关已布防</string>
    <string name="detailgateway_armmode_cancel_click">点击撤防</string>
    <string name="detailgateway_armmode_deploy_click">点击布防</string>
    <string name="detailgateway_add">添加子设备</string>
    <string name="gateway_armmode">布撤防</string>
    <string name="gateway_armmode_deploy">布防</string>
    <string name="gateway_armmode_disarm">撤防</string>
    <string name="scene_maintain_nohas">无设备</string>
    <string name="delete_account_text1">为了保障账号安全，请确认以下信息。</string>
    <string name="delete_account_account_safety">账号安全</string>
    <string name="delete_account_account_safety_detail">删除账号后，账号下的个人信息都将被删除。此操作不可逆，请知悉！</string>
    <string name="delete_account_device_safety">设备安全</string>
    <string name="delete_account_device_safety_detail">删除账号后，账号下绑定的所有设备都将无法使用。此操作不可逆，请知悉！</string>
    <string name="delete_account_confirm_btn">我已阅读并申请退出</string>
    <string name="device_add_success">设备添加成功</string>
    <string name="current_test">立即体验</string>
    <string name="edit_device_name">修改设备昵称</string>
    <string name="open_record">开锁记录</string>
    <string name="create_user">创建用户</string>
    <string name="create_user_hint">请下面输入用户信息</string>
    <string name="create_user_name_hint">请输入用户昵称</string>
    <string name="nickname">昵称</string>
    <string name="all_time">全部时间</string>
    <string name="last_week">最近一周</string>
    <string name="last_month">近一个月</string>
    <string name="last_three_month">近三个月</string>
    <string name="last_half_year">近半年</string>
    <string name="all_record">全部记录</string>
    <string name="alarm_record">报警记录</string>
    <string name="info_record">信息记录</string>
    <string name="privacy_policy_dialog_title">欢迎来到拉斐智能</string>
    <string name="privacy_policy_dialog_title_2">温馨提示</string>
    <string name="privacy_policy_dialog_content">为向您提供安全、便捷的服务，我们需要在必要范围内申请设备状态等手机权限以及处理您的信息</string>
    <string name="privacy_policy_dialog_content_2">我们非常重视对您个人信息的保护，承诺严格按照拉斐智能隐私权政策保护及处理您的信息，如不同意该政策，很遗憾我们将无法提供服务。</string>
    <string name="privacy_policy_dialog_check_tip">详情请查阅</string>
    <string name="privacy_policy_dialog_link">《拉斐智能隐私权政策》</string>
    <string name="privacy_policy_dialog_get">知道了</string>
    <string name="privacy_policy_dialog_lgout_app">退出应用</string>
    <string name="privacy_policy_dialog_check_again">再次查看</string>
</resources>