<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_common_toolbar" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_16"
        android:paddingHorizontal="@dimen/dp_12"
        android:background="@color/appbgcolor"
        android:textSize="@dimen/sp_14"
        android:text="@string/delete_account_text1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_12"
        android:paddingVertical="@dimen/dp_16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:text="@string/delete_account_account_safety"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_12"
            android:textSize="@dimen/sp_14"
            android:text="@string/delete_account_account_safety_detail"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:text="@string/delete_account_device_safety"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_12"
            android:textSize="@dimen/sp_14"
            android:text="@string/delete_account_device_safety_detail"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginVertical="@dimen/dp_30"
        android:background="@drawable/shape_appcolor"
        android:paddingHorizontal="@dimen/dp_14"
        android:paddingVertical="@dimen/dp_12">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:text="@string/delete_account_confirm_btn"/>
    </RelativeLayout>
</LinearLayout>