<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_radius_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/all_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/all_time"
        android:textColor="#116CEB"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/all_c" />

    <TextView
        android:id="@+id/last_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/last_week"
        android:textColor="#116CEB"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/all_c" />

    <TextView
        android:id="@+id/last_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/last_month"
        android:textColor="#116CEB"
        android:textSize="@dimen/sp_18" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/all_c" />

    <TextView
        android:id="@+id/last_three_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/last_three_month"
        android:textColor="#116CEB"
        android:textSize="@dimen/sp_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/all_c" />

    <TextView
        android:id="@+id/last_half_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/last_half_year"
        android:textColor="#116CEB"
        android:textSize="@dimen/sp_18" />


</LinearLayout>