<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/one_switch_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/privacy_policy_dialog_title_2"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_dialog_content_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lgout_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/privacy_policy_dialog_lgout_app"
            android:textColor="@drawable/selector_theme_click" />

        <TextView
            android:id="@+id/check_again_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/privacy_policy_dialog_check_again"
            android:textColor="@drawable/selector_theme_click" />
    </LinearLayout>
</LinearLayout>