<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:descendantFocusability="blocksDescendants"
	android:layout_height="wrap_content" >

	<RelativeLayout
		android:id="@+id/responseListRelItem"
		android:layout_marginRight="4dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<ImageView
			android:id="@+id/responseListImgIcon"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:background="@drawable/icon_button"
			android:contentDescription="@string/contentDescription_null"/>

		<TextView
			android:id="@+id/responseListLblName"
			style="@style/NormalFontStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/responseListImgIcon"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="6dp"
			android:text="@string/devicelist_name" />

		<TextView android:id="@+id/responseListLblAction"
			android:layout_below="@+id/responseListLblName"
			android:layout_width="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginLeft="10dp"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/responseListImgIcon"
			android:text="@string/devicelist_action"
			style="@style/SmallFontStyle"/>

		<CheckBox android:id="@+id/responselistChkSelect"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/NormalFontStyle"/>

		<TextView android:id="@+id/responselistLblNohas"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_centerVertical="true"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:text="@string/scene_maintain_nohas"
			style="@style/NormalFontStyle"/>

		<Space
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="50dp" />

	</RelativeLayout>

</LinearLayout>