<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/deviceListRelItem"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<ImageView
		android:id="@+id/deviceListImgIcon"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_alignParentLeft="true"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="10dp"
		android:src="@drawable/icon_button"
		android:contentDescription="@string/contentDescription_null"/>

	<TextView
		android:id="@+id/deviceListLblName"
		style="@style/NormalFontStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/deviceListImgIcon"
		android:layout_toRightOf="@+id/deviceListImgIcon"
		android:layout_marginLeft="10dp"
		android:text="@string/devicelist_name" />

	<TextView android:id="@+id/devicelistLblStatus"
		android:layout_below="@+id/deviceListLblName"
		android:layout_width="wrap_content"
		android:layout_marginTop="2dp"
		android:layout_marginLeft="10dp"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/deviceListImgIcon"
		android:text="@string/devicelist_status"
		style="@style/SmallFontStyle"/>

	<Space
		android:layout_alignParentRight="true"
		android:layout_width="wrap_content"
		android:layout_height="52dp" />
</RelativeLayout>